--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://raam2912.github.io/Name_Corrector-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.8.1",
+    "jspdf": "^2.5.1",
     "marked": "^12.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm cache clean --force && npm install && react-scripts build", 
+    "build": "npm cache clean --force && npm install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
